--- a/resources/resources.qrc
+++ b/resources/resources.qrc
@@ -3,23 +3,24 @@
         <file>audio/ambience/mountainWind.mp3</file>
         <file>audio/music/placeholder.mp3</file>
         <file>audio/sfx/chiselLake.mp3</file>
+        <file>audio/sfx/drop.mp3</file>
+        <file>audio/sfx/eat.mp3</file>
         <file>audio/sfx/fishReel.mp3</file>
         <file>audio/sfx/fishSet.mp3</file>
         <file>audio/sfx/lanternRustle.mp3</file>
         <file>audio/sfx/moveSnow.mp3</file>
         <file>audio/sfx/moveStone.mp3</file>
+        <file>audio/sfx/sleep.mp3</file>
         <file>audio/sfx/take.mp3</file>
+        <file>fonts/PressStart2P-Regular.ttf</file>
         <file>images/camp.png</file>
         <file>images/campPath.png</file>
         <file>images/cave.png</file>
         <file>images/caveEntrance.png</file>
         <file>images/intro.png</file>
         <file>images/lake.png</file>
+        <file>images/perished.png</file>
         <file>images/valley.png</file>
         <file>stylesheets/stylesheet.qss</file>
-        <file>images/perished.png</file>
-        <file>fonts/PressStart2P-Regular.ttf</file>
-        <file>audio/sfx/eat.mp3</file>
-        <file>audio/sfx/drop.mp3</file>
     </qresource>
 </RCC>
