--- a/resources/resources.qrc
+++ b/resources/resources.qrc
@@ -17,6 +17,7 @@
         <file>images/campPath.png</file>
         <file>images/cave.png</file>
         <file>images/caveEntrance.png</file>
+        <file>images/caveLit.png</file>
         <file>images/icon.png</file>
         <file>images/intro.png</file>
         <file>images/lake.png</file>
