--- a/resources/resources.qrc
+++ b/resources/resources.qrc
@@ -16,7 +16,7 @@
         <file>audio/sfx/moveStone.mp3</file>
         <file>audio/sfx/sleep.mp3</file>
         <file>audio/sfx/take.mp3</file>
-        <file>fonts/PressStart2P-Regular.ttf</file>
+        <file>fonts/Caveat.ttf</file>
         <file>images/camp.png</file>
         <file>images/campPath.png</file>
         <file>images/cave.png</file>
