--- a/resources/stylesheets/stylesheet.qss
+++ b/resources/stylesheets/stylesheet.qss
@@ -5,9 +5,6 @@
     font: 20pt "Caveat";
 }
 
-#settingImage {
-border: 3px solid #c0c0c0;
-}
 
 #outputArea {
     line-height: 1.5;
@@ -15,7 +12,11 @@ border: 3px solid #c0c0c0;
 }
 
 QLineEdit {
-border: 3px solid #a89984;
+border: none;
+}
+
+QTextEdit {
+border: none;
 }
 
 QPushButton {
@@ -48,8 +49,4 @@ height: 0px;
 padding-top: 20%;
 padding-bottom: 20%;
 border: none;
-}
-
-#verticalLayout {
-border: 3px solid #a89984;
 }
