--- a/resources/resources.qrc
+++ b/resources/resources.qrc
@@ -18,7 +18,7 @@
         <file>audio/sfx/take.mp3</file>
         <file>fonts/Caveat.ttf</file>
         <file>images/camp.png</file>
-        <file>images/campPath.png</file>
+        <file>images/forestPath.png</file>
         <file>images/cave.png</file>
         <file>images/caveEntrance.png</file>
         <file>images/caveLit.png</file>
