--- a/resources/resources.qrc
+++ b/resources/resources.qrc
@@ -11,17 +11,20 @@
         <file>audio/sfx/fishReel.mp3</file>
         <file>audio/sfx/fishSet.mp3</file>
         <file>audio/sfx/flint.mp3</file>
+        <file>audio/sfx/hunt.mp3</file>
+        <file>audio/sfx/lakeSplash.mp3</file>
         <file>audio/sfx/lanternRustle.mp3</file>
         <file>audio/sfx/moveSnow.mp3</file>
         <file>audio/sfx/moveStone.mp3</file>
+        <file>audio/sfx/skin.mp3</file>
         <file>audio/sfx/sleep.mp3</file>
         <file>audio/sfx/take.mp3</file>
         <file>fonts/Caveat.ttf</file>
         <file>images/camp.png</file>
-        <file>images/forestPath.png</file>
         <file>images/cave.png</file>
         <file>images/caveEntrance.png</file>
         <file>images/caveLit.png</file>
+        <file>images/forestPath.png</file>
         <file>images/icon.png</file>
         <file>images/intro.png</file>
         <file>images/lake.png</file>
