--- a/resources/resources.qrc
+++ b/resources/resources.qrc
@@ -5,6 +5,7 @@
         <file>audio/ambience/mountainWind.mp3</file>
         <file>audio/music/placeholder.mp3</file>
         <file>audio/sfx/arrow.mp3</file>
+        <file>audio/sfx/ask.mp3</file>
         <file>audio/sfx/chiselLake.mp3</file>
         <file>audio/sfx/craft.mp3</file>
         <file>audio/sfx/drink.mp3</file>
