--- a/resources/resources.qrc
+++ b/resources/resources.qrc
@@ -23,6 +23,7 @@
         <file>audio/sfx/skin.mp3</file>
         <file>audio/sfx/sleep.mp3</file>
         <file>audio/sfx/take.mp3</file>
+        <file>audio/sfx/write.mp3</file>
         <file>fonts/Caveat.ttf</file>
         <file>images/camp.png</file>
         <file>images/cave.png</file>
