--- a/src/mainwindow.ui
+++ b/src/mainwindow.ui
@@ -79,7 +79,7 @@
         </spacer>
        </item>
        <item>
-        <widget class="QLabel" name="settingImage">
+        <widget class="QLabel" name="location">
          <property name="sizePolicy">
           <sizepolicy hsizetype="Expanding" vsizetype="Expanding">
            <horstretch>0</horstretch>
