--- a/resources/stylesheets/stylesheet.qss
+++ b/resources/stylesheets/stylesheet.qss
@@ -23,25 +23,25 @@ QPushButton {
     background-color: #c0c0c0;
 }
 
-QScrollBar:vertical {
+QScrollDiceBar:vertical {
 background: #2f2f2f;
 width: 15px;
 margin: 0;
 }
 
-QScrollBar::handle:vertical {
+QScrollDiceBar::handle:vertical {
 background: #5b5b5b;
 }
 
-QScrollBar::add-line:vertical {
+QScrollDiceBar::add-line:vertical {
 height: 0px;
 }
 
-QScrollBar::sub-line:vertical {
+QScrollDiceBar::sub-line:vertical {
 height: 0px;
 }
 
-QScrollBar::add-page:vertical, QScrollBar::sub-page:vertical {
+QScrollDiceBar::add-page:vertical, QScrollDiceBar::sub-page:vertical {
 height: 0px;
 }
 
